# modular_slang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  example.slang  main.cc  slang.patch  test.slang
Scripts/Editor/: ModularSlang.cs
